--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10004,3 +10004,112 @@ h3 {
     border-color: #dee2e6;
   }
 }
+.card-body__wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: "space-between";
+  align-items: "center";
+  flex-wrap: wrap;
+  color: green;
+}
+
+.car-body__flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  color: green;
+}
+
+.box {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.form-abe .custom-field {
+  display: flex;
+  flex-direction: column;
+  justify-content: "space-between";
+  align-items: "center";
+  flex-wrap: wrap;
+  color: green;
+  position: relative;
+  font-size: 14px;
+  border-top: 1.25rem solid transparent;
+  margin-bottom: 0.25rem;
+  margin-left: 1.25rem;
+  --field-padding: 12px;
+}
+.form-abe .custom-field input {
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: #f2f2f2;
+  padding: var(--field-padding);
+  border-radius: 3px;
+  width: 250px;
+  outline: none;
+  font-size: 14px;
+}
+.form-abe .custom-field .placeholder {
+  position: absolute;
+  left: var(--field-padding);
+  width: calc(100% - var(--field-padding) * 2);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  top: 22px;
+  line-height: 100%;
+  transform: translateY(-50%);
+  color: #aaa;
+  transition: top 0.3s ease, color 0.3s ease, font-size 0.3s ease;
+}
+.form-abe .custom-field.one input {
+  background: none;
+  border: 2px solid #ddd;
+  transition: border-color 0.3s ease;
+}
+.form-abe .custom-field.one input + .placeholder {
+  left: 8px;
+  padding: 0 5px;
+}
+.form-abe .custom-field.one input:not(:-moz-placeholder-shown) {
+  border-color: #222;
+  transition-delay: 0.1s;
+}
+.form-abe .custom-field.one input:not(:-ms-input-placeholder) {
+  border-color: #222;
+  transition-delay: 0.1s;
+}
+.form-abe .custom-field.one input.dirty,
+.form-abe .custom-field.one input:not(:placeholder-shown),
+.form-abe .custom-field.one input:focus {
+  border-color: #222;
+  transition-delay: 0.1s;
+}
+.form-abe .custom-field.one input:not(:-moz-placeholder-shown) + .placeholder {
+  top: 0;
+  font-size: 11px;
+  color: #222;
+  background: #fff;
+  width: auto;
+}
+.form-abe .custom-field.one input:not(:-ms-input-placeholder) + .placeholder {
+  top: 0;
+  font-size: 11px;
+  color: #222;
+  background: #fff;
+  width: auto;
+}
+.form-abe .custom-field.one input.dirty + .placeholder,
+.form-abe .custom-field.one input:not(:placeholder-shown) + .placeholder,
+.form-abe .custom-field.one input:focus + .placeholder {
+  top: 0;
+  font-size: 11px;
+  color: #222;
+  background: #fff;
+  width: auto;
+}
