--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -32,12 +32,11 @@
   }
 }
 
-@mixin displayFlex($justifyContent, $alignItems) {
+@mixin displayFlex($flexDirection, $justifyContent, $alignItems) {
   display: flex;
-  // flex-flow: row wrap;
-  flex-direction: column;
+  flex-flow: row wrap;
+  flex-direction: $flexDirection;
   justify-content: $justifyContent;
   align-items: $alignItems;
   flex-wrap: wrap;
-  color: green;
 }
